fixed stuff and added reset's

--- a/src/main.styl
+++ b/src/main.styl
@@ -6,14 +6,6 @@
 
 /* ----------- packages ------------ */
 
+@import 'packages/reset-min'
 @import 'packages/grid-system'
 
-
-
-
-
-/* ----------- stylus functions ------------ */
-/*
-p : explain css
-lookup : output variable value
-*/
