--- a/src/main.styl
+++ b/src/main.styl
@@ -1,3 +1,8 @@
+/*!
+* Serra : A css framework for beauty style
+* Author: Salam Hiyali , E-mail: hiyali920@gmail.com
+* Created at: 2017-3-14 at Beijing in China
+* */
 
 /* ----------- libs ------------ */
 
@@ -8,4 +13,5 @@
 
 @import 'packages/reset-min'
 @import 'packages/grid-system'
+@import 'packages/useful-classes'
 
