added elements and colors and clean up

--- a/src/lib/constant.styl
+++ b/src/lib/constant.styl
@@ -1,3 +1,19 @@
 /* ----------- constants ------------*/
 $namespace = 'sr'
 
+/* ----------- color ---------- */
+$sr-colors = c-white #fff,
+  c-lime #a4c400,
+  c-green #60a917,
+  c-cyan #1ba1e2,
+  c-blue #0050ef,
+  c-violet #aa00ff,
+  c-pink #f472d0,
+  c-red #e51400,
+  c-orange #fa6800,
+  c-amber #f0a30a,
+  c-yellow #e3c800,
+  c-brown #825a2c,
+  c-olive #6d8764,
+  c-black #000,
+
