--- a/src/lib/function.styl
+++ b/src/lib/function.styl
@@ -14,3 +14,10 @@ getName(name = $ns)
   else
     name
 
+
+/* ----------- color / background-color ------------*/
+
+c(color)
+  color color
+bc(color)
+  background-color color
