--- a/src/main.styl
+++ b/src/main.styl
@@ -8,10 +8,12 @@
 
 @import 'lib/constant'
 @import 'lib/function'
+@import 'lib/reset-min'
 
 /* ----------- packages ------------ */
 
-@import 'packages/reset-min'
 @import 'packages/grid-system'
 @import 'packages/useful-classes'
+@import 'packages/elements'
+@import 'packages/colors'
 
