--- a/src/packages/useful-classes.styl
+++ b/src/packages/useful-classes.styl
@@ -5,36 +5,45 @@
 /* text align */
 for prop in start center end
   .text-{prop}
-    text-align: prop
+    text-align prop
 
 
 /* text ellipsis */
 [class*="text-ellipsis-"]
-  display: -webkit-box
-  -webkit-box-orient: vertical
-  overflow: hidden
+  display -webkit-box
+  -webkit-box-orient vertical
+  overflow hidden
 
 .text-
   for prop in 2..5
     &ellipsis-{prop}
-      -webkit-line-clamp: prop
+      -webkit-line-clamp prop
 
   &ellipsis
-    white-space: nowrap
-    text-overflow: ellipsis
-    overflow: hidden
+    white-space nowrap
+    text-overflow ellipsis
+    overflow hidden
 
 
 /* background image */
 .bg-image
-  background-size: contain
-  background-repeat: no-repeat
-  background-position: center
+  background-size contain
+  background-repeat no-repeat
+  background-position center
   &.cover
-    background-size: cover
+    background-size cover
   &.stretch
-    background-size: 100% 100%
+    background-size 100% 100%
 
+
+/* .clear-fix */
+.clear-fix
+  &::before
+  &::after
+    content ""
+    display table
+  &::after
+    clear both
 
 /* */
 
